# submission_ws

./: .gitignore  .gitmodules  Pipfile  README.md  README.rst  api.yml  requirements.txt  setup.cfg
docker/: README.md  drmaatic-compose.sh
docker/slurm-drmaa-master/: Dockerfile  build.sh
docker/submission-ws/: Dockerfile  build.sh  compose_entrypoint.sh  config.json
docker/test-compose/: docker-compose.yml
docs/: admin-usage.rst  api.rst  conf.py  config.rst  configuration.md  index.rst  installation.rst  openapi-schema.yml  openapi2-schema.yml  openapi3-schema.yml  quickstart.rst  requirements.txt  usage.rst
figures/: schema.graphml
scripts/: submission-ws  submission-ws-setup
server/: config.json  example_config.json  settings.py  urls.py
static/css/: mymodel_list.css
static/favicon/: browserconfig.xml
submission/: admin.py  amqp.py  apps.py  authentication.py  log.py  models.py  pagination.py  permissions.py  serializers.py  tests.py  throttles.py  urls.py  utils.py  views.py
submission/drm_job_template/: models.py  serializers.py
submission/parameter/: admin.py  models.py  views.py
submission/script/: admin.py  models.py  views.py
submission/task/: admin.py  models.py  serializers.py  views.py
submission_ws/server/: config.json
submission_ws/submission/: renderers.py
submission_ws/submission/drm_job_template/: admin.py  models.py
submission_ws/submission/parameter/: serializers.py
submission_ws/submission/script/: serializers.py  views.py
templates/rest_framework/: api.html
