[metadata]
name = submission_ws
version = 0.1
description = Submission Server
long_description = file: docs/README.rst
url = https://biocomputingup.it/
author = BioComputing UP
author_email = biocomp@bio.unipd.it
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.1.7
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    djangorestframework >= 3.12.4
    environs
    pytimeparse
    pyjwt
    django-filter
    django-admin-rangefilter
    django-cors-headers
    django-extensions
    requests
    drmaa
    mysqlclient
scripts = scripts/submission-ws, scripts/submission-ws-setup

[options.entry_points]
console_scripts =
    submission-ws-manage = server.manage:main